changed font and added new board members

--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
+<!-- Designed and coded by Jiayin Tang
+Last updated: March 28, 2016
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<title>CU BMES</title>
 		<!-- Basic page styling -->
-		<link rel="stylesheet" type="text/css" href="base.css">
+		<link rel="stylesheet" type="text/css" href="css/base.css">
 		<!-- User styling -->
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<!-- font .css file -->
-		<link rel="stylesheet" href="http://s3.amazonaws.com/codeacademy-content/courses/ltp/css/shift.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<!-- FONT -->
+        <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
+        
+        <!-- page icon -->
+        <link rel="icon" href="images/favicon.ico">
 	</head>
 
 	<body>
@@ -19,28 +26,30 @@
 						<li class="action-item"><a href="#top"><p>CU BMES</p></a></li>
 					</ul>
 					<ul class="right">
-						<li><a href="#committees"><p>Committees</p></a></li>
-						<li><a href="#board"><p>Board</p></a></li>
-						<li><a href="http://orion.bme.columbia.edu/bmes/photos.html"><p>Photos</p></a></li>
-						<li><a href="http://orion.bme.columbia.edu/bmes/scavengerhunt.html"><p>Scavenger Hunt</p></a></li>
+						<li><a href="board.html"><p>Board</p></a></li>
+						<li><a href="board.html#committees"><p>Committees</p></a></li>
+                        <li><a href="photos.html"><p>Photos</p></a></li>
+						<!-- <li><a href="http://orion.bme.columbia.edu/bmes/scavengerhunt.html"><p>Scavenger Hunt</p></a></li> -->
 
-						<li><a href="http://orion.bme.columbia.edu/bmes/faq.html"><p>FAQ</p></a></li>
-						<li><a href="http://orion/bme.columbia.edu/bmes/contacts.html"><p>Contact</p></a></li>
+						<li><a href="faq.html"><p>FAQ</p></a></li>
+						<li><a href="contacts.html"><p>Contact</p></a></li>
 					</ul>
 				</div>
 			</nav>
 		</div>
 
 		<div class="jumbotron" id="top">
+            <div class="vignette"></div>
 			<div class="jumbotron-image"></div>
             <div class="content">
-                <h1>Columbia Biomedical Engineering Society</h1>
+                <h2>Columbia University</h2>
+                <h1>Biomedical Engineering Society</h1>
             </div>
 		</div>
 
 		<section id="learn-more">
 			<div class="content">
-				<h2>Who We Are</h2>
+				<h1>Who We Are</h1>
                 <br>
 				<p>We are Columbia University’s Biomedical Engineering Society (BMES) chapter! Deciding to pursue a study in biomedical engineering can be a daunting proposition. Our organization is designed to make the process smoother. We bring together students of all levels within the field, as well as from related engineering disciplines.</p>
                 <p>Undergraduates who are interested in having a more interactive experience with the department and faculty are encourage to attend events and volunteer within the organization. Additionally, we run a mentorship program to facilitate the journey of becoming a biomedical engineer. Please check our calendar of events for information about our upcoming events, and we hope to see you soon!</p>
@@ -49,122 +58,21 @@
 
 		<section id="events">
 			<div class="content">
-				<h3>Events</h3>
+				<h1>Events</h1>
                 <br>
 				<p>We have several series of events, including Fun With Faculty and Riverside Chats, as well as other social mixers, career-oriented activities, and community outreach opportunities throughout the year.</p>
 
-				<h3>Spring 2015</h3>
+				<h3>Spring 2016</h3>
                 <br>
 				<!-- put google calender here -->
-				<iframe src="https://www.google.com/calendar/embed?src=columbia.edu_g0n3800a0rcg4ltkhjhfo0qs34%40group.calendar.google.com&amp;showPrint=0&amp;showTabs=0&amp;mode=AGENDA&amp;height=350&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York" style=" border-width:0 " width="250" height="350" frameborder="0" scrolling="no"></iframe>
+				<iframe src="https://www.google.com/calendar/embed?src=columbia.edu_g0n3800a0rcg4ltkhjhfo0qs34%40group.calendar.google.com&amp;showPrint=0&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York" style=" border-width:0 " width="500" height="350" frameborder="0" scrolling="no"></iframe>
 			</div>
 		</section>
 
-		<section id="committees">
-			<div class="content">
-				<a name="committees"><h2>Committees</h2></a>
-                <br>
-			</div>
-			<div class="content">
-				<div class="row">
-    		        <div class="col-md-4" align="justify">
-      			        <h3>Community Outreach</h3>
-                        <p>The Community Outreach committee organize BMES events near or outside campus with a focus on working with other Columbia student groups like the Society of Women Engineers. In the spring, they plan to represent the department and BME student body in Relay for Life.</p>
-
-                        <h3>Student Life</h3>
-                        <p>The Student Life committee brings BME students together through study breaks, fun outings, and mentorship families. Families are divided into “houses” that consist of freshmen paired with upperclassmen to receive some BME-related guidance. In the spring, they will organize the annual BMES barbeque for both faculty and students.</p>
-
-                    </div>
-
-                    <div class="col-md-4" align="justify">
-                        <h3>Professional Development</h3>
-                        <p>The Professional Development committee organizes student involvement in career-building events like the NYC Riverside Chats and professional school panels to expose students to biotech industry  and academia internships. In the spring, they will host the first on-campus biotech career fair.</p>
-    
-                        <h3>Publicity</h3>
-                        <p>The Publicity committee manages the Columbia BMES website and the BMES bulletin board. Their responsibilities include creating event flyers and documenting these events by taking pictures. In the spring, they will focus on making the BMES website into a valuable resource and hub for all biomedical opportunities available to Columbia BME undergraduates.</p>
-
-                    </div>
-
-    		        <div class="col-md-4" align="justify">
-              			<h3>Academic Affairs</h3>
-                        <p>The Academic Affairs committee works closely with the BME department to host events like the Fun with Faculty series and holiday department dinner, which bring faculty and students together to build strong interpersonal relationships to provide a venue for career advice. In the spring, they will host the first medical devices hackathon at Columbia University.</p>
-
-                    </div>
-                </div>
-			</div>
-		</section>
-
-		<section id="board">
-			<div class="content">
-				<a name="board"><h2>Our Board</h2></a>
-                <br>
-
-                <div class="left">
-                    <h3>Executive Board Members</h3>
-                    <p>
-        	            <b>President:</b><br>
-            	        <a href="http://s25.postimg.org/c30ln5b2n/christine.jpg">Christine Chen <img src="images/board/christinechen.jpg"></a>
-                        <br>
-                        SEAS '15
-                    </p>
-                    <p>
-                        <b>Vice President - <br>
-                        Student Life & Community Outreach</b>
-                        <br>
-                        <a href="http://s25.postimg.org/8aqs5t3rj/Elizabeth.jpg">Elizabeh Dente <img src="images/board/elizabethdente.jpg"></a>
-                        <br>
-                        SEAS '16
-                    </p>
-                    <p>
-                        <b>Vice President - <br>
-                        Academic Affairs & Professional Development</b>
-                        <br>
-                        <a href="http://s25.postimg.org/p5rmsobwv/ritish.jpg">Ritish Patnaik <img src="images/board/ritishpatnaik.jpg"></a>
-                        <br>
-                        SEAS '16
-                    </p>
-                    <p>
-                        <b>Secretary</b><br>
-                        Kathleen Fan<br>
-                        SEAS '17
-                    </p>
-                    <p>
-                        <b>Treasurer</b><br>
-                        <a href="http://s25.postimg.org/jo77ohknj/andrea.jpg">Andrea Ortuno <img src="images/board/andreaortuno.jpg"></a>
-                        <br>
-                        SEAS '16
-               	    </p>
-                    <p>
-                        <b>Publicity Chair:</b><br>
-                        <a href="http://s25.postimg.org/l0lbki3in/KELLY.jpg">Kelly Liu <img src="images/board/kellyliu.jpg"></a>
-                        <br>
-                        SEAS '15
-                    </p>
-                    <p>
-                        <b>Senior Advisor:</b><br>
-                        <a href="http://s25.postimg.org/berr47ccv/sonia.jpg">Sonia Bansal <img src="images/board/soniabansal.jpg"></a>
-                        <br>
-                        SEAS '14
-                    </p>
-                </div>
-
-                <div class="right">
-                    <h3>Organizational Commmittee Members</h3>
-                    <p>Bina Bansinath</p>
-                    <p>Julia Joern</p>
-                    <p>Bryan Louie</p>
-                    <p>Meghana Noonavath</p>
-                    <p>Alexandra Nuzhdin</p>
-                    <p>Santiago Pena</p>
-                    <a href="http://s25.postimg.org/grqagq8gf/image.jpg">Jiayin Tang <img src="images/board/jiayintang.jpg"> </a>
-                    <p>Andrew Tieu</p>
-                </div>  
-            </div>
-		</section>
 
 		<footer>
 			<div class="content">
-                <p>Built by Jiayin Tang and Kelly Liu &copy 2015</p>
+                <p>Built and designed by Jiayin Tang &copy 2015-2016</p>
                 <p class="right">Licensed under the Creative Commons</p>
             </div>
 		</footer>
@@ -172,6 +80,6 @@
 		<!-- jQuery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<!-- Javascript -->
-		<script type="text/javascript" src="script.js"></script>
+		<script type="text/javascript" src="js/script.js"></script>
 	</body>
 </html>
